--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "chai": "^3.2.0",
     "chai-as-promised": "^5.1.0",
+    "coveralls": "^2.11.4",
     "eslint": "^1.4.1",
     "istanbul": "^0.3.19",
     "mocha": "^2.3.2",
