--- a/test/.eslintrc
+++ b/test/.eslintrc
@@ -1,7 +1,6 @@
 {
     "rules": {
-        "max-nested-callbacks": [1, 8],
-        "no-unused-expressions": 0
+        "max-nested-callbacks": [1, 8]
     },
     "globals": {
         "it": false,
