--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "chai": "^3.2.0",
     "chai-as-promised": "^5.1.0",
+    "codecov.io": "^0.1.6",
     "coveralls": "^2.11.4",
     "eslint": "^1.4.1",
     "istanbul": "^0.3.19",
